--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container-card">
             <form action="/#">
                 <input type="text" name="name" placeholder="Nombre Guia">
-                <div class="drop-zone">
+                <div id="drop-zone">
                     <span class="drop-zone__prompt">Drag & Drop a file or Click for upload him</span>
                     <input type="file" name="myFile" class="drop-zone__input">
                 </div>
