Lets start work in the dinamic whit JS

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="container-card">
             <form action="/#">
                 <input type="text" name="name" placeholder="Nombre Guia">
-                <div id="drop-zone">
-                    <span class="drop-zone__prompt">Drag & Drop a file or Click for upload him</span>
+                <div class="drop-zone">
+                    <span class="drop-zone__prompt">Arrastre un archivo o de click para elegirlo</span>
                     <input type="file" name="myFile" class="drop-zone__input">
                 </div>
                 <input type="text" name="decription" placeholder="Descripción"><br>
@@ -23,6 +23,8 @@
             </form>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
